--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,22 @@
 {
-    "name": "anahkiasen/rfc-history",
+    "name": "madewithlove/why-we-cant-have-nice-things",
     "authors": [
         {
-            "name": "Maxime Fabre",
-            "email": "ehtnam6@gmail.com"
+            "name": "Madewithlove",
+            "email": "heroes@madewithlove.be"
         }
     ],
     "require": {
         "illuminate/cache": "^5.1",
+        "illuminate/database": "^5.1",
         "illuminate/filesystem": "^5.1",
-        "illuminate/support": "^5.1",
         "league/container": "^1.3",
         "league/route": "^1.2",
         "symfony/css-selector": "^2.7",
         "symfony/dom-crawler": "^2.7",
-        "twig/twig": "^1.22"
+        "twig/twig": "^1.22",
+        "vlucas/phpdotenv": "^2.0",
+        "robmorgan/phinx": "^0.4.6"
     },
     "require-dev": {
         "symfony/var-dumper": "^2.7"
