--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "vlucas/phpdotenv": "^2.0"
     },
     "require-dev": {
-        "symfony/var-dumper": "^2.7"
+        "symfony/var-dumper": "^2.7",
+        "maximebf/debugbar": "^1.10"
     },
     "autoload": {
         "psr-4": {
