--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "require-dev": {
         "symfony/var-dumper": "^2.7",
-        "maximebf/debugbar": "^1.10"
+        "maximebf/debugbar": "^1.10",
+        "fabpot/php-cs-fixer": "^1.10"
     },
     "autoload": {
         "psr-4": {
