--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/css-selector": "^2.7",
         "symfony/dom-crawler": "^2.7",
         "twig/twig": "^1.22",
-        "vlucas/phpdotenv": "^2.0"
+        "vlucas/phpdotenv": "^2.0",
+        "illuminate/events": "^5.1"
     },
     "require-dev": {
         "symfony/var-dumper": "^2.7",
