--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,14 @@
         "symfony/dom-crawler": "^2.7",
         "twig/twig": "^1.22",
         "vlucas/phpdotenv": "^2.0",
-        "illuminate/events": "^5.1"
+        "illuminate/events": "^5.1",
+        "mnapoli/silly": "^1.1"
     },
     "require-dev": {
         "symfony/var-dumper": "^2.7",
         "maximebf/debugbar": "^1.10",
-        "fabpot/php-cs-fixer": "^1.10"
+        "fabpot/php-cs-fixer": "^1.10",
+        "psy/psysh": "^0.5.2"
     },
     "autoload": {
         "psr-4": {
