--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "twig/twig": "^1.22",
         "vlucas/phpdotenv": "^2.0",
         "illuminate/events": "^5.1",
-        "mnapoli/silly": "^1.1"
+        "mnapoli/silly": "^1.1",
+        "filp/whoops": "^1.1"
     },
     "require-dev": {
         "symfony/var-dumper": "^2.7",
