--- a/composer.json
+++ b/composer.json
@@ -7,25 +7,24 @@
         }
     ],
     "require": {
+        "filp/whoops": "^1.1",
         "illuminate/cache": "^5.1",
         "illuminate/database": "^5.1",
         "illuminate/filesystem": "^5.1",
         "league/container": "^1.3",
         "league/route": "^1.2",
+        "mnapoli/silly": "^1.1",
         "robmorgan/phinx": "^0.4.6",
         "symfony/css-selector": "^2.7",
         "symfony/dom-crawler": "^2.7",
         "twig/twig": "^1.22",
         "vlucas/phpdotenv": "^2.0",
-        "illuminate/events": "^5.1",
-        "mnapoli/silly": "^1.1",
-        "filp/whoops": "^1.1"
     },
     "require-dev": {
-        "symfony/var-dumper": "^2.7",
-        "maximebf/debugbar": "^1.10",
         "fabpot/php-cs-fixer": "^1.10",
-        "psy/psysh": "^0.5.2"
+        "maximebf/debugbar": "^1.10",
+        "psy/psysh": "^0.5.2",
+        "symfony/var-dumper": "^2.7"
     },
     "autoload": {
         "psr-4": {
