--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "madewithlove-webpack-config": "^1.1.0",
     "webpack": "^1.12.2"
+  },
+  "scripts": {
+    "build": "webpack --progress"
   }
 }
