--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "illuminate/cache": "^5.1",
         "illuminate/database": "^5.1",
         "illuminate/filesystem": "^5.1",
+        "illuminate/pagination": "^5.1",
         "league/container": "^1.3",
         "league/route": "^1.2",
         "mnapoli/silly": "^1.1",
