--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "babel-runtime": "^5.8.25",
-    "bootstrap": "^3.3.5",
+    "bootstrap-sass": "^3.3.5",
     "bootswatch": "^3.3.5",
     "jquery": "^2.1.4",
     "tablesorter": "^2.23.5"
