--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "dependencies": {
     "babel-runtime": "^5.8.25",
     "bootstrap-sass": "^3.3.5",
-    "bootswatch": "^3.3.5",
-    "jquery": "^2.1.4",
-    "tablesorter": "^2.23.5"
+    "bootstrap.native": "^0.9.7-npmfix.1",
+    "bootswatch": "^3.3.5"
   },
   "devDependencies": {
     "madewithlove-webpack-config": "^1.1.0",
