--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "bootswatch": "^3.3.5"
   },
   "devDependencies": {
+    "babel-eslint": "^4.1.3",
+    "eslint": "^1.7.3",
+    "eslint-config-madewithlove": "^1.0.1",
     "madewithlove-webpack-config": "^1.1.0",
     "webpack": "^1.12.2"
   },
   "scripts": {
-    "build": "webpack --progress"
+    "build": "webpack --progress",
+    "lint": "eslint resources/assets/js"
   }
 }
