--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/dom-crawler": "^2.7",
         "thomaswelton/gravatarlib": "^0.1.0",
         "twig/twig": "^1.22",
-        "vlucas/phpdotenv": "^2.0"
+        "vlucas/phpdotenv": "^2.0",
+        "illuminate/events": "^5.1"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "^1.10",
