--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "babel-runtime": "^5.8.25",
     "bootstrap-sass": "^3.3.5",
     "bootstrap.native": "^0.9.7-npmfix.1",
-    "bootswatch": "^3.3.5"
+    "bootswatch": "^3.3.5",
+    "font-awesome": "^4.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
