--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,19 @@
         "filp/whoops": "^1.1",
         "illuminate/cache": "^5.1",
         "illuminate/database": "^5.1",
+        "illuminate/events": "^5.1",
         "illuminate/filesystem": "^5.1",
         "illuminate/pagination": "^5.1",
         "league/container": "^1.3",
         "league/route": "^1.2",
         "mnapoli/silly": "^1.1",
         "robmorgan/phinx": "^0.4.6",
+        "rvdv/nntp": "^0.6.0",
         "symfony/css-selector": "^2.7",
         "symfony/dom-crawler": "^2.7",
         "thomaswelton/gravatarlib": "^0.1.0",
         "twig/twig": "^1.22",
-        "vlucas/phpdotenv": "^2.0",
-        "illuminate/events": "^5.1"
+        "vlucas/phpdotenv": "^2.0"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "^1.10",
