--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bootstrap-sass": "^3.3.5",
     "bootstrap.native": "^0.9.7-npmfix.1",
     "bootswatch": "^3.3.5",
-    "font-awesome": "^4.4.0"
+    "font-awesome": "^4.4.0",
+    "highlight.js": "^8.9.1"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
