--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "maximebf/debugbar": "^1.10",
         "phpunit/phpunit": "^5.0",
         "psy/psysh": "^0.5.2",
-        "symfony/var-dumper": "^2.7"
+        "symfony/var-dumper": "^2.7",
+        "mockery/mockery": "^0.9.4"
     },
     "autoload": {
         "psr-4": {
