--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "phpunit/phpunit": "^5.0",
         "psy/psysh": "^0.5.2",
         "symfony/var-dumper": "^2.7",
-        "mockery/mockery": "^0.9.4"
+        "mockery/mockery": "^0.9.4",
+        "league/factory-muffin": "^2.1"
     },
     "autoload": {
         "psr-4": {
