--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,18 @@
         "illuminate/filesystem": "^5.1",
         "illuminate/pagination": "^5.1",
         "league/commonmark": "^0.11.3",
-        "league/container": "^1.3",
-        "league/route": "^1.2",
+        "league/container": "^2.0",
+        "league/route": "2.*@dev",
         "mnapoli/silly": "^1.1",
         "robmorgan/phinx": "^0.4.6",
         "rvdv/nntp": "^0.6.0",
         "symfony/css-selector": "^2.7",
         "symfony/dom-crawler": "^2.7",
+        "symfony/psr-http-message-bridge": "^0.2.0",
         "thomaswelton/gravatarlib": "^0.1.0",
         "twig/twig": "^1.22",
-        "vlucas/phpdotenv": "^2.0"
+        "vlucas/phpdotenv": "^2.0",
+        "zendframework/zend-diactoros": "^1.1"
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "^1.10",
