--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "zendframework/zend-diactoros": "^1.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^2.0",
         "fabpot/php-cs-fixer": "^1.10",
         "league/factory-muffin": "^2.1",
         "maximebf/debugbar": "^1.10",
