--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
         "league/route": "2.*@dev",
         "mnapoli/silly": "^1.1",
         "mrclay/minify": "^2.2",
+        "oscarotero/psr7-middlewares": "^3.5",
+        "relay/relay": "^1.0",
         "robmorgan/phinx": "^0.4.6",
-        "rvdv/nntp": "0.7.*@dev",
-        "symfony/css-selector": "^2.7",
+        "rvdv/nntp": "1.0.*@dev",
         "symfony/dom-crawler": "^2.7",
-        "symfony/psr-http-message-bridge": "^0.2.0",
         "thomaswelton/gravatarlib": "^0.1.0",
         "twig/twig": "^1.22",
         "vlucas/phpdotenv": "^2.0",
@@ -38,12 +38,6 @@
         "psy/psysh": "^0.5.2",
         "symfony/var-dumper": "^2.7"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/Anahkiasen/php-nntp"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "History\\": "src"
