--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         }
     ],
     "require": {
+        "php": ">=5.6.0",
         "filp/whoops": "^1.1",
         "illuminate/cache": "^5.1",
         "illuminate/database": "^5.1",
