Add Github service to grab extra metadata from Github

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "illuminate/filesystem": "^5.1",
         "illuminate/pagination": "^5.1",
         "illuminate/redis": "^5.1",
+        "knplabs/github-api": "^1.5",
         "league/commonmark": "^0.11.3",
         "league/container": "^2.0",
         "league/route": "2.*@dev",
