--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "league/route": "2.*@dev",
         "mnapoli/silly": "^1.1",
         "mrclay/minify": "^2.2",
+        "mtdowling/cron-expression": "^1.0",
         "relay/relay": "^1.0",
         "robmorgan/phinx": "^0.4.6",
         "rvdv/nntp": "1.0.*@dev",
