--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "require": {
         "php": ">=5.6.0",
         "filp/whoops": "^1.1",
+        "franzl/whoops-middleware": "^0.2.0",
         "illuminate/cache": "^5.1",
         "illuminate/database": "^5.1",
         "illuminate/events": "^5.1",
