--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     ],
     "require": {
         "php": ">=5.6.0",
+        "guzzlehttp/guzzle": "^6.1",
         "illuminate/cache": "^5.1",
         "illuminate/database": "^5.1",
         "illuminate/events": "^5.1",
@@ -18,6 +19,7 @@
         "league/commonmark": "^0.11.3",
         "league/container": "^2.0",
         "league/route": "2.*@dev",
+        "league/tactician": "^0.6.1",
         "mnapoli/silly": "^1.1",
         "monolog/monolog": "^1.17",
         "mrclay/minify": "^2.2",
@@ -30,7 +32,8 @@
         "thomaswelton/gravatarlib": "^0.1.0",
         "twig/twig": "^1.23",
         "vlucas/phpdotenv": "^2.1",
-        "zendframework/zend-diactoros": "^1.1"
+        "zendframework/zend-diactoros": "^1.1",
+        "league/tactician-container": "0.1.*@dev"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^2.0",
