--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "madewithlove/why-we-cant-have-nice-things",
+    "type": "project",
     "authors": [
         {
             "name": "Madewithlove",
@@ -8,46 +9,48 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "guzzlehttp/guzzle": "^6.1",
-        "illuminate/cache": "^5.1",
-        "illuminate/database": "^5.1",
-        "illuminate/events": "^5.1",
-        "illuminate/filesystem": "^5.1",
-        "illuminate/pagination": "^5.1",
-        "illuminate/redis": "^5.1",
-        "knplabs/github-api": "^1.5",
-        "league/commonmark": "^0.11.3",
-        "league/container": "^2.0",
-        "league/route": "2.*@dev",
-        "league/tactician": "^0.6.1",
-        "mnapoli/silly": "^1.1",
-        "monolog/monolog": "^1.17",
-        "mrclay/minify": "^2.2",
-        "mtdowling/cron-expression": "^1.0",
-        "oscarotero/psr7-middlewares": "^3.6",
-        "relay/relay": "^1.0",
-        "robmorgan/phinx": "^0.4.6",
+        "container-interop/container-interop": "^1.1",
+        "guzzlehttp/guzzle": "^6.2",
+        "illuminate/cache": "^5.2",
+        "illuminate/database": "^5.2",
+        "illuminate/events": "^5.2",
+        "illuminate/filesystem": "^5.2",
+        "illuminate/pagination": "^5.2",
+        "illuminate/redis": "^5.2",
+        "knplabs/github-api": "^1.6",
+        "league/commonmark": "^0.13.2",
+        "league/container": "^2.2",
+        "league/route": "^2.0",
+        "league/tactician": "^1.0",
+        "mnapoli/silly": "^1.3",
+        "monolog/monolog": "^1.18",
+        "mrclay/minify": "^2.3",
+        "mtdowling/cron-expression": "^1.1",
+        "oscarotero/psr7-middlewares": "^3.14",
+        "relay/relay": "^1.1",
+        "robmorgan/phinx": "^0.5.3",
         "rvdv/nntp": "1.0.*@dev",
-        "symfony/dom-crawler": "^2.7",
-        "symfony/process": "^2.7",
+        "symfony/dom-crawler": "^3.0",
+        "symfony/process": "^3.0",
         "thomaswelton/gravatarlib": "^0.1.0",
-        "twig/twig": "^1.23",
-        "vlucas/phpdotenv": "^2.1",
-        "zendframework/zend-diactoros": "^1.1"
+        "twig/twig": "^1.24",
+        "vlucas/phpdotenv": "^2.2",
+        "zendframework/zend-diactoros": "^1.3"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^2.0",
+        "barryvdh/laravel-debugbar": "^2.2",
         "fabpot/php-cs-fixer": "2.0.*@dev",
-        "filp/whoops": "^1.1",
-        "franzl/whoops-middleware": "^0.2.0",
-        "league/factory-muffin": "^2.1",
+        "filp/whoops": "^2.1",
+        "franzl/whoops-middleware": "^0.3.1",
+        "league/factory-muffin": "^3.0",
+        "league/factory-muffin-faker": "^1.0",
         "mockery/mockery": "^0.9.4",
-        "php-middleware/php-debug-bar": "^1.0",
-        "phpunit/phpunit": "^5.0",
-        "psy/psysh": "^0.5.2",
-        "symfony/var-dumper": "^2.7",
-        "phpro/grumphp": "^0.5.1",
-        "roave/security-advisories": "dev-master@dev"
+        "php-middleware/php-debug-bar": "^1.1",
+        "phpro/grumphp": "^0.8.0",
+        "phpunit/phpunit": "^5.3",
+        "psy/psysh": "^0.7.2",
+        "roave/security-advisories": "dev-master@dev",
+        "symfony/var-dumper": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -63,5 +66,9 @@
         "migrate": "phinx migrate",
         "lint": "php-cs-fixer fix",
         "test": "phpunit"
+    },
+    "config": {
+        "sort-packages": true,
+        "preferred-install": "dist"
     }
 }
