--- a/grumphp.yml
+++ b/grumphp.yml
@@ -1,12 +1,17 @@
 parameters:
-  git_dir: .
-  bin_dir: ./vendor/bin
-  tasks:
-    blacklist:
-      keywords:
-        - "die("
-        - "var_dump("
-        - "exit;"
-        - "console.log("
-    phpcsfixer: ~
-    phpunit: ~
+    git_dir: .
+    bin_dir: ./vendor/bin
+    tasks:
+        composer: ~
+        phpcs:
+            standard: "phpcs.xml"
+        phpcsfixer: ~
+        securitychecker: ~
+        jsonlint: ~
+        git_blacklist:
+            triggered_by: [php]
+            keywords:
+                - "die("
+                - "var_dump("
+                - "dump("
+                - "exit;"
