--- a/grumphp.yml
+++ b/grumphp.yml
@@ -2,10 +2,11 @@ parameters:
     git_dir: .
     bin_dir: ./vendor/bin
     tasks:
+        phpunit:
+            enabled: false
         composer: ~
         phpcs:
             standard: "phpcs.xml"
-        phpcsfixer: ~
         securitychecker: ~
         jsonlint: ~
         git_blacklist:
