Lint and consolidate scripts

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,10 @@
-extends: 'madewithlove'
-rules:
-    id-length: [2, {"exceptions": ["i", "a", "b"]}]
-    new-cap: [2, {"capIsNewExceptions": ["Line"]}]
-    no-new: 0
-    no-magic-numbers: 0
-    no-loop-func: 0
+{
+    "extends": "madewithlove",
+    "rules": {
+        "babel/new-cap": [2, {"capIsNewExceptions": ["Line"]}],
+        "id-length": [2, {"exceptions": ["i", "a","b"]}],
+        "max-statements": [2, 15],
+        "no-magic-numbers": 0,
+        "no-new": 0
+    }
+}
