--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,12 @@
         "squizlabs/php_codesniffer": "^2.5",
         "symfony/var-dumper": "^3.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:Anahkiasen/pthreads-polyfill.git"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "History\\": "src"
