--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "illuminate/pagination": "^5.2",
         "illuminate/redis": "^5.2",
         "knplabs/github-api": "^1.6",
-        "krakjoe/pthreads-polyfill": "^1.1",
+        "krakjoe/pthreads-polyfill": "dev-master",
         "league/commonmark": "^0.13.2",
         "league/container": "^2.2",
         "league/route": "^2.0",
@@ -72,6 +72,8 @@
             "History\\": "tests"
         }
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
         "sort-packages": true,
         "preferred-install": "dist"
