--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "league/container": "^2.2",
         "league/route": "^2.0",
         "league/tactician": "^1.0",
+        "misd/linkify": "^1.1",
         "mnapoli/silly": "^1.3",
         "monolog/monolog": "^1.18",
         "mrclay/minify": "^2.3",
