Need to enable it too

--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,7 @@ dependencies:
   pre:
     - echo "memory_limit = 1024M" > ~/.phpenv/versions/$(phpenv global)/etc/conf.d/memory.ini
     - echo "always_populate_raw_post_data = -1" > ~/.phpenv/versions/$(phpenv global)/etc/conf.d/post.ini
+    - sed -i 's/^;//' ~/.phpenv/versions/$(phpenv global)/etc/conf.d/mailparse.ini
     - pecl install mailparse
   override:
     - npm install
